--- a/IRIS-DATASET/iris_dataset_EDA.ipynb
+++ b/IRIS-DATASET/iris_dataset_EDA.ipynb
@@ -457,13 +457,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'X_train_std_S' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-edbae2ffd8b7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLinearSVC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train_std_S\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train_S\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Training Accuracy Sepal = {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train_std_S\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_S\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Testing  Accuracy Sepal = {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test_std_S\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_S\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train_std_S' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "model = LinearSVC(C=10)\n",
+    "model.fit(X_train_std_S,y_train_S)\n",
+    "print('Training Accuracy Sepal = {}'.format(model.score(X_train_std_S, y_train_S)))\n",
+    "print('Testing  Accuracy Sepal = {}'.format(model.score(X_test_std_S, y_test_S)))\n",
+    "\n",
+    "model.fit(X_train_std_P,y_train_P)\n",
+    "print('\\nTraining Accuracy Petal = {}'.format(model.score(X_train_std_P, y_train_P)))\n",
+    "print('Testing  Accuracy Petal = {}'.format(model.score(X_test_std_P, y_test_P)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "model = KNeighborsClassifier(n_neighbors=3)\n",
     "model.fit(X_train_std_S,y_train_S)\n",
     "print('Training Accuracy Sepal = {}'.format(model.score(X_train_std_S, y_train_S)))\n",
     "print('Testing  Accuracy Sepal = {}'.format(model.score(X_test_std_S, y_test_S)))\n",
